src/objects/WorkOrder.object
<CustomObject>
    <listViews>
        <fullName>All_WorkOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Work Orders</label>
    </listViews>
    <listViews>
        <fullName>My_WorkOrders</fullName>
        <filterScope>Mine</filterScope>
        <label>My Work Orders</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>