src/objects/WorkOrder/fields/GDMFSL_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Arrival_Time__c</fullName>
    <label>Arrival Time</label>
    <type>DateTime</type>
</CustomField>