src/objects/WorkOrder/fields/GDMFSL_Bill_to_Account__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Bill_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders (Bill to Account)</relationshipLabel>
    <relationshipName>Work_Orders_Bill_To</relationshipName>
    <type>Lookup</type>
</CustomField>