src/objects/WorkOrder/fields/GDMFSL_Bill_To_Source_System_Reference__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Bill_To_Source_System_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Source System Reference</label>
    <referenceTo>Source_System__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>