src/objects/WorkOrder/fields/GDMFSL_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Change_Reason__c</fullName>
    <inlineHelpText>Priority Change Reason</inlineHelpText>
    <label>Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>