src/objects/WorkOrder/fields/GDMFSL_Chargeable__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Chargeable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This value indicates if the Work Is chargeable and can be edited.</description>
    <label>Chargeable</label>
    <type>Checkbox</type>
</CustomField>