src/objects/WorkOrder/fields/GDMFSL_Classified_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Classified_Billing_Address__c</fullName>
    <description>DTXFSL-7383</description>
    <formula>IF(Location.GDMFSL_Is_Classified__c = FALSE,
(Account.BillingStreet &amp; BR() &amp;
Account.BillingCity &amp; &quot;, &quot; &amp;
Account.BillingState &amp; &quot; &quot; &amp; BR() &amp;
Account.BillingPostalCode),
&quot;Undisclosed Location&quot;)</formula>
    <inlineHelpText>Formula field populated based on Account and displayed as undisclosed for classified locations</inlineHelpText>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>