src/objects/WorkOrder/fields/GDMFSL_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Contact_Email__c</fullName>
    <formula>Contact.Email</formula>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>