src/objects/WorkOrder/fields/GDMFSL_Created_by_WO_Merge_Process__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Created_by_WO_Merge_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by WO Merge Process</label>
    <type>Checkbox</type>
</CustomField>