src/objects/WorkOrder/fields/GDMFSL_Delivery_Block__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Delivery_Block__c</fullName>
    <formula>IF(
AND(
OR( ISPICKVAL(StatusCategory, &quot;New&quot;) ,
ISPICKVAL(StatusCategory, &quot;In Progress&quot;)),
NOT( ISNULL( GDMFSL_Sold_To_Source_System_Reference__c)))
,
GDMFSL_Sold_To_Source_System_Reference__r.GDMFSL_Delivery_Block__c, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Block</label>
    <type>Checkbox</type>
</CustomField>