src/objects/WorkOrder/fields/GDMFSL_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Distribution_Channel__c</fullName>
    <defaultValue>TEXT(10)</defaultValue>
    <label>Distribution Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>