src/objects/WorkOrder/fields/GDMFSL_Executed_by_Sub_Contractor__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Executed_by_Sub_Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executed by Sub-Contractor</label>
    <type>Checkbox</type>
</CustomField>