src/objects/WorkOrder/fields/GDMFSL_Extra_Travel__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Extra_Travel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extra Travel</label>
    <type>Checkbox</type>
</CustomField>