src/objects/WorkOrder/fields/GDMFSL_forge_faultCreatedOn__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_forge_faultCreatedOn__c</fullName>
    <label>Forge Created Date</label>
    <type>DateTime</type>
</CustomField>