src/objects/WorkOrder/fields/GDMFSL_Non_Reactive_Work__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Non_Reactive_Work__c</fullName>
    <formula>ISPICKVAL(WorkType.GDMFSL_WorkType_Category__c,&apos;PM&apos;)
 ||  ISPICKVAL(WorkType.GDMFSL_WorkType_Category__c,&apos;Audit&apos;)
 ||  ISPICKVAL(WorkType.GDMFSL_WorkType_Category__c,&apos;Site Survey&apos;)
 ||  ISPICKVAL(WorkType.GDMFSL_WorkType_Category__c,&apos;Install&apos;)</formula>
    <label>Non-Reactive Work</label>
    <type>Checkbox</type>
</CustomField>