src/objects/WorkOrder/fields/GDMFSL_On_Demand__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_On_Demand__c</fullName>
    <formula>Case.GDMFSL_On_Demand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Demand</label>
    <type>Checkbox</type>
</CustomField>