src/objects/WorkOrder/fields/GDMFSL_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_PO_Number__c</fullName>
    <label>PO Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>