src/objects/WorkOrder/fields/GDMFSL_PO_Required_for_Reactive_Coverage__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_PO_Required_for_Reactive_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Number Required for Reactive Coverage</label>
    <type>Checkbox</type>
</CustomField>