src/objects/WorkOrder/fields/GDMFSL_Region__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>