src/objects/WorkOrder/fields/GDMFSL_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Response_Time__c</fullName>
    <label>Response Time</label>
    <type>DateTime</type>
</CustomField>