src/objects/WorkOrder/fields/GDMFSL_Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Sales_Office__c</fullName>
    <label>Sales Office</label>
    <length>4</length>
    <type>Text</type>
</CustomField>