src/objects/WorkOrder/fields/GDMFSL_SC_Block__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_SC_Block__c</fullName>
    <description>If WO has Service Contract and is in status category New or In Progress derive Service Contract SC Block value, otherwise set it by default to false.</description>
    <formula>IF(
  AND( 
   OR( ISPICKVAL(StatusCategory, &quot;New&quot;) ,
       ISPICKVAL(StatusCategory, &quot;In Progress&quot;)),
    NOT( ISNULL( ServiceContractId))) 
, 
ServiceContract.GDMFSL_SC_Block__c, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Block</label>
    <type>Checkbox</type>
</CustomField>