src/objects/WorkOrder/fields/GDMFSL_SC_Block_Type__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_SC_Block_Type__c</fullName>
    <formula>IF(
  AND( 
   OR( ISPICKVAL(StatusCategory, &quot;New&quot;) ,
       ISPICKVAL(StatusCategory, &quot;In Progress&quot;)),
    NOT( ISNULL( ServiceContractId))) 
, 
  TEXT(ServiceContract.GDMFSL_SC_Block_Type__c), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Block Type</label>
    <type>Text</type>
</CustomField>