src/objects/WorkOrder/fields/GDMFSL_Sold_To_Source_System_Reference__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Sold_To_Source_System_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To Source System Reference</label>
    <referenceTo>Source_System__c</referenceTo>
    <relationshipLabel>Work Orders (Sold To Source System Reference)</relationshipLabel>
    <relationshipName>Work_Orders_SoldTo</relationshipName>
    <type>Lookup</type>
</CustomField>