src/objects/WorkOrder/fields/GDMFSL_Total_OT_Travel_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Total_OT_Travel_in_minutes__c</fullName>
    <label>Total OT Travel (in minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>