src/objects/WorkOrder/fields/GDMFSL_Travel_Time_Chargeable__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Travel_Time_Chargeable__c</fullName>
    <description>...</description>
    <formula>ServiceContract.GDMFSL_Travel_Time_Chargeable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Time Chargeable</label>
    <type>Checkbox</type>
</CustomField>