src/objects/WorkOrder/fields/IoT_Integration_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>IoT_Integration_Error_Message__c</fullName>
    <label>IoT Integration Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>