src/objects/WorkOrder/fields/IoT_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>IoT_Integration_Status__c</fullName>
    <label>IoT Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_Status</valueSetName>
    </valueSet>
</CustomField>