src/objects/WorkOrder/fields/Work_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Category__c</fullName>
    <description>DTXFSL-1014</description>
    <formula>TEXT(WorkType.GDMFSL_WorkType_Category__c)</formula>
    <inlineHelpText>Formula field populated based on the Work Type of the Work Order</inlineHelpText>
    <label>Work Type Category</label>
    <type>Text</type>
</CustomField>