src/objects/WorkOrder/validationRules/GDMFSL_Canceled_ServiceContract_Used.validationRule-meta.xml
<ValidationRule>
    <fullName>GDMFSL_Canceled_ServiceContract_Used</fullName>
    <active>true</active>
    <description>A WorkOrder cannot be created with a Cancelled Service Contract</description>
    <errorConditionFormula>ISNEW() &amp;&amp; ServiceContract.GDMFSL_Cancelled__c == TRUE</errorConditionFormula>
    <errorMessage>Work Order cannot be created using a Cancelled Service Contract</errorMessage>
</ValidationRule>