src/objects/WorkOrder/validationRules/GDMFSL_Validate_PO_Exist.validationRule-meta.xml
<ValidationRule>
    <fullName>GDMFSL_Validate_PO_Exist</fullName>
    <active>true</active>
    <description>Work Order must have a PO Number on the following scenarios:
1. When the Work Order doesn&apos;t have a related Service Contract
2. When a Break-Fix Work Order&apos;s &apos;PO Number Required for Reactive Coverage&apos; field is checked (true)</description>
    <errorConditionFormula>OR
(
  AND
    (
      (ISBLANK(GDMFSL_PO_Number__c)), (ISBLANK(ServiceContractId))
    )
,
  AND
    (
      (ISBLANK(GDMFSL_PO_Number__c)), (GDMFSL_PO_Required_for_Reactive_Coverage__c = TRUE) ,(ISPICKVAL(WorkType.GDMFSL_WorkType_Category__c, &quot;BF&quot;))
    )
)</errorConditionFormula>
    <errorMessage>PO Number is required</errorMessage>
</ValidationRule>