src/objects/WorkOrder/listViews/All_Account_Work_Orders.listView-meta.xml
<ListView>
    <fullName>All_Account_Work_Orders</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Name</columns>
    <columns>WorkType</columns>
    <columns>Asset</columns>
    <columns>Location</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Work_Type_Category__c</field>
        <operation>notEqual</operation>
        <value>Audit</value>
    </filters>
    <filters>
        <field>Work_Type_Category__c</field>
        <operation>notEqual</operation>
        <value>Site Survey</value>
    </filters>
    <label>All Account Work Orders - Customer</label>
    <sharedTo>
        <allCustomerPortalUsers/>
    </sharedTo>
</ListView>