src/objects/WorkOrder/listViews/All_WorkOrders.listView-meta.xml
<ListView>
    <fullName>All_WorkOrders</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Account</columns>
    <columns>Location</columns>
    <columns>Priority</columns>
    <columns>Status</columns>
    <columns>ServiceTerritory</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location</field>
        <operation>contains</operation>
        <value>Alvin S Glenn Detention Center</value>
    </filters>
    <label>All Work Orders</label>
</ListView>