src/objects/WorkOrder/listViews/GDMFSL_SubContractor_My_Work_Orders.listView-meta.xml
<ListView>
    <fullName>GDMFSL_SubContractor_My_Work_Orders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GDMFSL_Resource_Equals_Running_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Work Orders (Contractor)</label>
</ListView>