src/objects/WorkOrder/listViews/GDMFSL_Work_Orders_To_Be_Audited.listView-meta.xml
<ListView>
    <fullName>GDMFSL_Work_Orders_To_Be_Audited</fullName>
    <columns>Name</columns>
    <columns>GDMFSL_Region__c</columns>
    <columns>COUNTRY_CODE</columns>
    <columns>ServiceTerritory</columns>
    <columns>GDMFSL_Profit_Center__c</columns>
    <columns>Location</columns>
    <columns>GDMFSL_Bill_to_Account__c</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Work Orders To Be Audited</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>