src/objects/WorkOrder/listViews/Incomplete_Reasons_and_Codes.listView-meta.xml
<ListView>
    <fullName>Incomplete_Reasons_and_Codes</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>GDMFSL_Incomplete_Reason__c</columns>
    <columns>GDMFSL_Incomplete_Reason_Notes__c</columns>
    <columns>WorkType</columns>
    <columns>ServiceTerritory</columns>
    <columns>GDMFSL_Action_Taken__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GDMFSL_Action_Taken__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>GDMFSL_Incomplete_Reason__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Incomplete Reasons and Codes</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>