src/objects/WorkOrder/listViews/IoT_Pending_Review.listView-meta.xml
<ListView>
    <fullName>IoT_Pending_Review</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <columns>ServiceTerritory</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>IoT</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Pending Review</value>
    </filters>
    <label>IoT Pending Review</label>
    <sharedTo>
        <group>NOC</group>
    </sharedTo>
</ListView>