src/objects/WorkOrder/listViews/My_Teams_Work_Orders.listView-meta.xml
<ListView>
    <fullName>My_Teams_Work_Orders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <filterScope>Everything</filterScope>
    <label>My Teams Work Orders</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>