src/objects/WorkOrder/listViews/My_Work_Orders_Today.listView-meta.xml
<ListView>
    <fullName>My_Work_Orders_Today</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Account</columns>
    <columns>Priority</columns>
    <columns>Status</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>StatusCategory</field>
        <operation>equals</operation>
        <value>0,1</value>
    </filters>
    <filters>
        <field>StartDate</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>My Open Work Orders Today</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>