src/objects/WorkOrder/listViews/My_WorkOrders.listView-meta.xml
<ListView>
    <fullName>My_WorkOrders</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>GDMFSL_Ship_To_Account__c</columns>
    <columns>EndDate</columns>
    <columns>Status</columns>
    <columns>Duration</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>WorkType</field>
        <operation>notEqual</operation>
        <value>Audit</value>
    </filters>
    <label>My Work Orders</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>